<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="pref_vibrateOn"
        app:title="@string/pref_notifications" />

    <ListPreference
        app:defaultValue="3"
        app:dialogTitle="@string/pref_updateFrequency"
        app:entries="@array/pref_updateFrequencyTypes_entries"
        app:entryValues="@array/pref_updateFrequencyTypes_values"
        app:key="pref_updateFrequency"
        app:title="@string/pref_updateFrequency" />
    <PreferenceCategory
        app:key="tab1"
        app:title="@string/pref_portfolio1">

        <EditTextPreference
            app:defaultValue="@string/pref_portfolio_name1_defaultValue"
            app:dialogTitle="@string/pref_portfolio_name1"
            app:key="pref_portfolio_name1"
            app:title="@string/pref_portfolio_name" />

        <ListPreference
            app:defaultValue="E"
            app:dialogTitle="@string/pref_portfolio_type1"
            app:entries="@array/pref_portfolio_type_entries"
            app:entryValues="@array/pref_portfolio_type_values"
            app:key="pref_portfolio_type1"
            app:title="@string/pref_portfolio_type" />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="tab2"
        app:title="@string/pref_portfolio2">

        <EditTextPreference
            app:defaultValue="@string/pref_portfolio_name2_defaultValue"
            app:dialogTitle="@string/pref_portfolio_name2"
            app:key="pref_portfolio_name2"
            app:title="@string/pref_portfolio_name" />

        <ListPreference
            app:defaultValue="S"
            app:dialogTitle="@string/pref_portfolio_type2"
            app:entries="@array/pref_portfolio_type_entries"
            app:entryValues="@array/pref_portfolio_type_values"
            app:key="pref_portfolio_type2"
            app:title="@string/pref_portfolio_type" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="tab3"
        app:title="@string/pref_portfolio3">

        <EditTextPreference
            app:defaultValue="@string/pref_portfolio_name3_defaultValue"
            app:dialogTitle="@string/pref_portfolio_name3"
            app:key="pref_portfolio_name3"
            app:title="@string/pref_portfolio_name" />

        <ListPreference
            app:defaultValue="D"
            app:dialogTitle="@string/pref_portfolio_type3"
            app:entries="@array/pref_portfolio_type_entries"
            app:entryValues="@array/pref_portfolio_type_values"
            app:key="pref_portfolio_type3"
            app:title="@string/pref_portfolio_type" />
    </PreferenceCategory>

</PreferenceScreen>